fix overflow

--- a/angular-project/src/app/pages/about-page/about-page.component.scss
+++ b/angular-project/src/app/pages/about-page/about-page.component.scss
@@ -2,7 +2,8 @@
 
 .about{
     height: 100vh;
-    overflow: auto;
+    overflow: hidden;
+    overflow-y: auto;
     &_header{
         font-size: 3rem;
         font-weight: 700;
